--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/asphalt"
-    tools:context=".MainActivity">
+    tools:context=".Manul_Obmanul">
 
     <ImageView
         android:id="@+id/manul_one"
@@ -17,7 +17,7 @@
         app:layout_constraintHorizontal_bias="0.8"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5"></ImageView>
+        app:layout_constraintVertical_bias="0.8"></ImageView>
 
     <ImageView
         android:id="@+id/manul_two"
@@ -29,7 +29,61 @@
         app:layout_constraintHorizontal_bias="0.2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5"></ImageView>
+        app:layout_constraintVertical_bias="0.8"></ImageView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="260dp"
+        android:orientation="vertical"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/iv_one"
+                style="@style/View_Grid"
+                app:srcCompat="@drawable/one" />
+
+            <ImageView
+                android:id="@+id/iv_two"
+                style="@style/View_Grid"
+                app:srcCompat="@drawable/two" />
+
+            <ImageView
+                android:id="@+id/iv_three"
+                style="@style/View_Grid"
+                app:srcCompat="@drawable/three" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/iv_four"
+                style="@style/View_Grid"
+                app:srcCompat="@drawable/four" />
+
+            <ImageView
+                android:id="@+id/iv_five"
+                style="@style/View_Grid"
+                app:srcCompat="@drawable/five" />
+
+            <ImageView
+                android:id="@+id/iv_six"
+                style="@style/View_Grid"
+                app:srcCompat="@drawable/six" />
+        </LinearLayout>
+    </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
